Proyecto1_RutasEnInternet/Avance3/parser.py
import sys
import re
import ply.lex as lex
import ply.yacc as yacc


# ---------------------------------------------------------------------------
# Lexer
# ---------------------------------------------------------------------------

# List of all token types that can be recognized by the lexer
tokens = (
    'RECORD_TYPE',
    'TIMESTAMP',
    'STATE',
    'IPADDR',
    'PIPE',
    'SLASH',
    'NUMBER',
    'LBRACE',
    'RBRACE',
    'COMMA',
)

# Maximum value for a 32-bit unsigned integer, used to validate both
# the TIMESTAMP token and the NUMBER token
MAX_UINT32 = 2**32 - 1


# Recognizes the TABLE_DUMP2 value used at the beginning of each record
def t_RECORD_TYPE(t):
    r'TABLE_DUMP2\b'
    return t


# Recognizes the possible states of a record: B, A or W
def t_STATE(t):
    r'[BAW]\b'
    return t


# Recognizes the timestamp field, which must have exactly 10 digits
# (unix timestamp). It must be defined before t_NUMBER so PLY gives it
# priority over the generic NUMBER rule.
def t_TIMESTAMP(t):
    r'(?<!\d)\d{10}(?!\d)'

    value = int(t.value)

    if value > MAX_UINT32:
        print(
            f"Lexical error [Line {t.lineno}]: "
            f"Timestamp out of the allowed range (32-bit uint): {value}"
        )
        t.lexer.has_errors = True
        return None

    t.value = value
    return t


# Recognizes IPv4 addresses and makes sure each octet is between 0 and 255
OCTET = r'(25[0-5]|2[0-4]\d|1\d\d|[1-9]?\d)'


@lex.TOKEN(r'\b(' + OCTET + r'\.){3}' + OCTET + r'\b')
def t_IPADDR(t):
    return t


# Separators used between fields and between an address and its mask
t_PIPE = r'\|'


# Braces and commas used when an AS path contains a group of AS numbers
t_LBRACE = r'\{'
t_RBRACE = r'\}'
t_COMMA = r','


def t_SLASH(t):
    r'/'
    t.lexer.after_slash = True
    return t


def t_NUMBER(t):
    r'\d+'

    value = int(t.value)
    after_slash = getattr(t.lexer, 'after_slash', False)
    t.lexer.after_slash = False  # el flag solo aplica al número inmediatamente después del '/'

    if after_slash and value > 32:
        print(
            f"Lexical error [Line {t.lineno}]: "
            f"Mask out of range (0-32): {value}"
        )
        t.lexer.has_errors = True
        return None

    if value > MAX_UINT32:
        print(
            f"Lexical error [Line {t.lineno}]: "
            f"Number out of the allowed range (32-bit uint): {value}"
        )
        t.lexer.has_errors = True
        return None

    t.value = value
    return t


# Keeps track of line numbers when the lexer finds one or more newlines
def t_newline(t):
    r'\n+'
    t.lexer.lineno += len(t.value)


# Spaces, tabs and carriage returns do not need to be returned as tokens
t_ignore = ' \t\r'


# Handles text that does not match any of the defined token rules
_illegal_run = re.compile(r'[^\s|/{},]+')


def t_error(t):
    # Try to report the whole invalid sequence instead of one character at a time
    match = _illegal_run.match(t.value)
    bad_lexeme = match.group(0) if match else t.value[0]

    print(
        f"Lexical error [Line {t.lineno}]: "
        f"Illegal token '{bad_lexeme}'"
    )

    t.lexer.has_errors = True
    t.lexer.skip(len(bad_lexeme))


lexer = lex.lex()


# ---------------------------------------------------------------------------
# Parser
# ---------------------------------------------------------------------------

def p_archivo_multiple(p):
    'archivo : linea archivo'
    p[0] = None

def p_archivo_single(p):
    'archivo : linea'
    p[0] = None

def p_linea(p):
    ('linea : RECORD_TYPE PIPE TIMESTAMP PIPE STATE PIPE IPADDR PIPE '
     'NUMBER PIPE prefix PIPE as_path')

    peer_as = p[9]
    as_numbers = p[13]

    if peer_as not in as_numbers:
        print(
            f"Semantic error [Line {p.lineno(1)}]: "
            f"PEER_AS ({peer_as}) does not appear in AS_PATH {sorted(as_numbers)}"
        )
        parser.has_errors = True

    p[0] = None

def p_prefix(p):
    'prefix : IPADDR SLASH NUMBER'
    p[0] = None

def p_as_path_multiple(p):
    'as_path : as_element as_path'
    p[0] = p[1] + p[2]

def p_as_path_single(p):
    'as_path : as_element'
    p[0] = p[1]

def p_as_element_num(p):
    'as_element : NUMBER'
    p[0] = [p[1]]

def p_as_element_set(p):
    'as_element : as_set'
    p[0] = p[1]

def p_as_set(p):
    'as_set : LBRACE as_set_list RBRACE'
    p[0] = p[2]

def p_as_set_list_multiple(p):
    'as_set_list : NUMBER COMMA as_set_list'
    p[0] = [p[1]] + p[3]

def p_as_set_list_single(p):
    'as_set_list : NUMBER'
    p[0] = [p[1]]

def p_error(p):
    if p is not None:
        print(f"Syntax error [Line {p.lineno}]")
    else:
        print("Syntax error: unexpected end of input")

    parser.has_errors = True

parser = yacc.yacc()

# ---------------------------------------------------------------------------
# Main
# ---------------------------------------------------------------------------

if __name__ == '__main__':
    if len(sys.argv) != 2:
        print("Usage: python mrtparser.py <mrt_dump_file>")
        sys.exit(1)

    input_path = sys.argv[1]

    with open(input_path, 'r') as f:
        data = f.read()

    lexer.lineno = 1
    lexer.has_errors = False
    lexer.input(data)

    collected_tokens = []

    while True:
        tok = lexer.token()
        if not tok:
            break
        collected_tokens.append(tok)

    choice = input(
        "Show results in (C)onsole or save them in a (F)ile? [C/F]: "
    ).strip().upper()

    lexer.lineno = 1
    lexer.has_errors = False
    parser.has_errors = False

    parser.parse(data, lexer=lexer, tracking=True)
    if choice == 'F':
        with open("ParserOutput.txt", "w") as out_file:

            out_file.write("=== Tokens ===\n")

            for tok in collected_tokens:
                out_file.write(f"{tok}\n")

            if lexer.has_errors:
                out_file.write("MRT File with INCORRECT tokens\n")
            else:
                out_file.write("MRT File with CORRECT tokens :)\n")

            out_file.write("\n=== Parse ===\n")

            if lexer.has_errors or parser.has_errors:
                out_file.write("MRT File with INCORRECT syntax\n")
            else:
                out_file.write("MRT File with CORRECT syntax :)\n")

        print("Results saved in ParserOutput.txt")

    else:
        print("=== Tokens ===")

        for tok in collected_tokens:
            print(tok)

        if lexer.has_errors:
            print("MRT File with INCORRECT tokens")
        else:
            print("MRT File with CORRECT tokens :)")

        print("\n=== Parse ===")

        if lexer.has_errors or parser.has_errors:
            print("MRT File with INCORRECT syntax")
        else:
            print("MRT File with CORRECT syntax :)")
